plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'be.helha.projets'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'com.googlecode.lanterna:lanterna:3.1.1'
    implementation 'org.mongodb:mongodb-driver-sync:4.9.0'
    implementation 'org.mongodb:mongodb-driver-core:4.9.0'
    implementation 'org.mongodb:bson:4.9.0'
    implementation("com.google.code.gson:gson:2.13.1")
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation("jakarta.validation:jakarta.validation-api:3.1.1")
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // Test si nécessaire
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    implementation 'org.json:json:20210307'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'

    //
    implementation 'com.googlecode.lanterna:lanterna:3.1.1'

}

tasks.named('test') {
    useJUnitPlatform()
}
tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:deprecation"
}
